--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CXX=g++
 DEBUG=-g
 OPT=-O0
 WARN=-Wall
-SFML=-lsfml-graphics -lsfml-window -lsfml-system
+SFML=-lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 CXXFLAGS=$(DEBUG) $(OPT) $(WARN) $(SFML)
 LD=g++
 OBJS= main.o player.o enemy.o life_bar.o
