--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ WARN=-Wall
 SFML=-lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 CXXFLAGS=$(DEBUG) $(OPT) $(WARN) $(SFML)
 LD=g++
-OBJS= main.o player.o enemy.o life_bar.o serie_music.o engine.o
+OBJS= main.o player.o enemy.o life_bar.o serie_music.o engine.o scene.o
 all: $(OBJS)
 	$(LD) -o $(TARGET) $(OBJS) $(CXXFLAGS)
 	@rm *.o
@@ -23,4 +23,5 @@ serie_music.o: serie_music.cpp
 	$(CXX) -c $(CXXFLAGS) serie_music.cpp -o serie_music.o
 engine.o: engine.cpp
 	$(CXX) -c $(CXXFLAGS) engine.cpp -o engine.o
-
+scene.o: scene.cpp
+	$(CXX) -c $(CXXFLAGS) scene.cpp -o scene.o
